cc: Fix vertex opacity shaders

Fix a typo that indexed by quad, not vertex.

Add a pixel test to prevent regressions.

BUG=694986
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2724563003
Cr-Commit-Position: refs/heads/master@{#453865}

Former-commit-id: 8558df98469ef25bcd685bd9f9b0dc080ad2dc5b